--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     height: 100px; /* Example height  */
     scroll-behavior: smooth; /* Smooth scrolling behavior */
     line-height: 1.6; /* Line height for readability */
-    background-image: url('../pictures/cebu2.jpg'); /* Background image */
+    background-image: url('/pictures/cebu2.jpg'); /* Background image */
     background-size: cover; /* Cover background */
     background-position: center; /* Center background image */
     background-repeat: no-repeat; /* No repeating background */
